--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,12 +1,12 @@
 configfile: "./config/config.yaml"
 
-include: "rules/test_case1.smk"
+include: "rules/testcase_1.smk"
 include: "rules/common_util.smk"
-include: "rules/test_case2.smk"
+include: "rules/testcase_2.smk"
 
 rule all:
     input:
-        rules.testcase1_all.input,
+        rules.testcase_1_all.input,
         expand(os.path.join(MMD_OUT_DIR, "{filename}.xml") , filename=all_file_paths),
         expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths)    
     default_target: True
