--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,19 +2,19 @@
 #---------------------------
 testcase_1:
     configurationTables:
-        inputs:  'config/inputs.tsv'
-        indicators: 'config/indicators.tsv'
-        scenarios:  'config/scenarios.tsv'
-        periods:  'config/periods.tsv'
-        seasons: 'config/seasons.tsv'
+        inputs:  'config/testcase_1/inputs.tsv'
+        indicators: 'config/testcase_1/indicators.tsv'
+        scenarios:  'config/testcase_1/scenarios.tsv'
+        periods:  'config/testcase_1/periods.tsv'
+        seasons: 'config/testcase_1/seasons.tsv'
     dirs:
-        variables: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/1.variables/time_binning_periods/noresm_hclim'
-        indicators: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/2.indicators/time_binning_periods/noresm_hclim'
+        variables: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/1.variables/time_binning_periods/cnrm_racmo'
+        indicators: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/2.indicators/time_binning_periods/cnrm_racmo'
         regridded: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/3.commmon_grid'
-        ensstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/4.ensstats/time_binning_periods/noresm_hclim'
-        arealstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/5.areal_statistics/time_binning_periods/noresm_hclim'
-        plots: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/6.plots/noresm_hclim'
-        netcdf: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/7.netcdf/noresm_hclim'
+        ensstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/4.ensstats/time_binning_periods/cnrm_racmo'
+        arealstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/5.areal_statistics/time_binning_periods/cnrm_racmo'
+        plots: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/6.plots/cnrm_racmo'
+        netcdf: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/7.netcdf/cnrm_racmo'
 
     # Configuration options------------------------------------
     arealstats:
@@ -35,4 +35,30 @@ testcase_2:
         input_json: "config/testcase_2.json"
         mmd_output: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_2/mmd"
         nc_output: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_2"
-        input_base: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_2/"
+        input_base: "/lustre/storeC-ext/users/kin2100/"
+testcase_6:
+    configurationTables:
+        inputs:  'config/testcase_6/inputs.tsv'
+        indicators: 'config/testcase_6/indicators.tsv'
+        scenarios:  'config/testcase_6/scenarios.tsv'
+        periods:  'config/testcase_6/periods.tsv'
+        seasons: 'config/testcase_6/seasons.tsv'
+        region: 'config/testcase_6/region.tsv'
+    dirs:
+        region: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_6/noresm-hclim'
+
+    # Configuration options------------------------------------
+    arealstats:
+        calcForMembers: False
+    cutouts:
+        method: 'lonlatbox'
+        xmin: 4.088
+        xmax: 31.761
+        ymin: 57.759
+        ymax: 71.384
+    ensembles:
+        upperPercentile: 90
+        centralPercentile: 50
+        lowerPercentile: 10
+    outputGrid:
+        regriddingEngine: None
