--- a/config/config.yaml
+++ b/config/config.yaml
@@ -40,6 +40,8 @@ testcase_2:
 testcase_7:
         attributes: "config/testcase_7/global_attr.json"
         variables_pr: "config/testcase_7/variable_pr.json"
+        index_tasmax20ge: "config/testcase_7/index_tasmax20ge.json"
+        30_year_mean: "config/testcase_7/30_year_mean_diff_norheatwave.json"
         updated_nc: "output/testcase_7"
         input_nc: "config/testcase_7/input.json"
         input_base: "/home/shamlym/workspace/klima-kverna/nc/"
