--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,19 +2,19 @@
 #---------------------------
 testcase_1:
     configurationTables:
-        inputs:  'config/testcase_1/inputs.tsv'
-        indicators: 'config/testcase_1/indicators.tsv'
-        scenarios:  'config/testcase_1/scenarios.tsv'
-        periods:  'config/testcase_1/periods.tsv'
-        seasons: 'config/testcase_1/seasons.tsv'
+        inputs:  '../config/testcase_1/inputs.tsv'
+        indicators: '../config/testcase_1/indicators.tsv'
+        scenarios:  '../config/testcase_1/scenarios.tsv'
+        periods:  '../config/testcase_1/periods.tsv'
+        seasons: '../config/testcase_1/seasons.tsv'
     dirs:
-        variables: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/1.variables/time_binning_periods/cnrm_racmo'
-        indicators: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/2.indicators/time_binning_periods/cnrm_racmo'
-        regridded: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/3.commmon_grid'
-        ensstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/4.ensstats/time_binning_periods/cnrm_racmo'
-        arealstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/5.areal_statistics/time_binning_periods/cnrm_racmo'
-        plots: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/6.plots/cnrm_racmo'
-        netcdf: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/7.netcdf/cnrm_racmo'
+        variables: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/1.variables/time_binning_periods/mpi_racmo'
+        indicators: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/2.indicators/time_binning_periods/mpi_racmo'
+        regridded: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/3.commmon_grid'
+        ensstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/4.ensstats/time_binning_periods/mpi_racmo'
+        arealstats: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/5.areal_statistics/time_binning_periods/mpi_racmo'
+        plots: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/6.plots/mpi_racmo'
+        netcdf: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_1/KAPy_results/7.netcdf/mpi_racmo'
 
     # Configuration options------------------------------------
     arealstats:
@@ -32,20 +32,20 @@ testcase_1:
     outputGrid:
         regriddingEngine: None
 testcase_2:        
-        input_json: "config/testcase_2.json"
+        input_json: "/lustre/storeC-ext/users/klimakverna/development/Klimakverna-Pilot1/config/testcase_2.json"
         mmd_output: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_2/mmd"
         nc_output: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_2"
         input_base: "/lustre/storeC-ext/users/kin2100/"
 testcase_6:
     configurationTables:
-        inputs:  'config/testcase_6/inputs.tsv'
-        indicators: 'config/testcase_6/indicators.tsv'
-        scenarios:  'config/testcase_6/scenarios.tsv'
-        periods:  'config/testcase_6/periods.tsv'
-        seasons: 'config/testcase_6/seasons.tsv'
-        region: 'config/testcase_6/region.tsv'
+        inputs:  '../config/testcase_6/inputs.tsv'
+        indicators: '../config/testcase_6/indicators.tsv'
+        scenarios:  '../config/testcase_6/scenarios.tsv'
+        periods:  '../config/testcase_6/periods.tsv'
+        seasons: '../config/testcase_6/seasons.tsv'
+        region: '../config/testcase_6/region.tsv'
     dirs:
-        region: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_6/noresm-hclim'
+        region: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_6/model_results/ecearth-racmo'
 
     # Configuration options------------------------------------
     arealstats:
