--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,4 @@
-configfile: "./config/config.yaml"
+configfile: "../config/config.yaml"
 
 include: "rules/common_util.smk"
 include: "rules/testcase_1.smk"
@@ -7,8 +7,8 @@ include: "rules/testcase_6.smk"
 
 rule all:
     input:
-        #rules.testcase_1_all.input, # testcase 1 
-        #expand(os.path.join(MMD_OUT_DIR, "{filename}.xml") , filename=all_file_paths), # testcase 2
-        #expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths)    # testcase 2
+        rules.testcase_1_all.input, # testcase 1 
+        expand(os.path.join(MMD_OUT_DIR, "{filename}.xml") , filename=all_file_paths), # testcase 2
+        expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths),    # testcase 2
         rules.testcase_6_all.input, # testcase 6
     default_target: True
