--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,4 @@
-configfile: "../config/config.yaml"
+configfile: "config/config.yaml"
 
 include: "rules/common_util.smk"
 include: "rules/testcase_1.smk"
