--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,15 +1,7 @@
-configfile: "./config/config.yaml"
-
-include: "rules/testcase_1.smk"
-include: "rules/common_util.smk"
-include: "rules/testcase_2.smk"
-include: "rules/testcase_7.smk"
-
+configfile: "../config/config.yaml"
+include: "rules/testcase_3.smk"
 
 rule all:
     input:
-        rules.testcase_1_all.input,
-        expand(os.path.join(MMD_OUT_DIR, "{filename}.xml") , filename=all_file_paths),
-        expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths) ,
-        expand(os.path.join(UPDATED_NC_OUT, "{filename}.nc4"), filename=all_file_paths),  
-    default_target: True
+        expand("%s/{sample}.txt" % OUTPUT_DIR, sample=ALL_FILES)
+
