--- a/config/config.yaml
+++ b/config/config.yaml
@@ -48,12 +48,12 @@ testcase_3:
         pr:  "ssp*/pr_*2100.nc"
         psl:  "ssp*/psl_*2100.nc"
     var_ranges:
-        tas_min: 206.0
-        tas_max: 318.0
-        pr_min: -1e-10
-        pr_max: 1e-03
-        psl_min: 95400
-        psl_max: 105100
+        tas_min: 200.0
+        tas_max: 330.0
+        pr_min: 0.0
+        pr_max: 0.002
+        psl_min: 94000
+        psl_max: 107000
     cutouts:
         # "none" or "lonlatbox"
         method: "none"
