--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,16 +1,22 @@
 configfile: "config/config.yaml"
 
 # include: "rules/common_util.smk" To be moved to testcase_2
-include: "rules/testcase_1.smk"
+#include: "rules/testcase_1.smk"
 # include: "rules/testcase_2.smk"
-include: "rules/testcase_6.smk"
-include: "rules/testcase_7.smk"
+#include: "rules/testcase_6.smk"
+#include: "rules/testcase_7.smk"
+include: "rules/hydro.smk"
+
+output_var = os.path.join(output, "results/output.var")
+output_nse = os.path.join(output, "results/nse.Rout")
 
 rule all:
     input:
-        rules.testcase_1_all.input, # testcase 1 
+        #rules.testcase_1_all.input, # testcase 1 
         # expand(os.path.join(MMD_OUT_DIR, "{filename}.xml") , filename=all_file_paths), # testcase 2
         # expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths),    # testcase 2
-        rules.testcase_6_all.input, # testcase 6
-        expand(os.path.join(UPDATED_NC_OUT, "{filename}.nc4"), filename=all_file_paths),  # testcase 7
+        #rules.testcase_6_all.input, # testcase 6
+        #expand(os.path.join(UPDATED_NC_OUT, "{filename}.nc4"), filename=all_file_paths),  # testcase 7
+        output_var,
+        output_nse
     default_target: True
