--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,7 +7,7 @@ configfile: "config/config.yaml"
 #include: "rules/testcase_7.smk"
 include: "rules/hydro.smk"
 
-output_var = os.path.join(output, "results/output.var")
+output_var = os.path.join(output, "results")
 output_nse = os.path.join(output, "nse.txt")
 
 rule all:
