--- a/workflow/envs/klimakverna.yaml
+++ b/workflow/envs/klimakverna.yaml
@@ -15,5 +15,7 @@ dependencies:
   - python-cdo
   - plotnine
   - pip
-  - pip:
-    - git+https://github.com/metno/py-mmd-tools.git 
+  - conda-forge::gdal
+  - geopandas
+  - rasterio
+  - r-essentials
