--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,9 +8,9 @@ include: "rules/testcase_8.smk"
 
 rule all:
     input:
-        rules.testcase_1_all.input, # testcase 1 
-        expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths),    # testcase 2
-        rules.testcase_6_all.input, # testcase 6
+        #rules.testcase_1_all.input, # testcase 1 
+        #expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths),    # testcase 2
+        #rules.testcase_6_all.input, # testcase 6
         expand(os.path.join(UPDATED_NC_OUT, "{filename}.nc4"), filename=all_file_paths),  # testcase 7
         rules.testcase_8_all.input # testcase 8
     default_target: True
