--- a/config/config.yaml
+++ b/config/config.yaml
@@ -67,9 +67,10 @@ testcase_7:
     variables_pr: "config/testcase_7/variable_pr.json"
     index_tasmax20ge: "config/testcase_7/index_tasmax20ge.json"
     30_year_mean: "config/testcase_7/30_year_mean_diff_norheatwave.json"
-    updated_nc: "output/testcase_7"
+    updated_nc: "/lustre/storeC-ext/users/klimakverna/development/output/testcase_7"
     input_nc: "config/testcase_7/input.json"
     input_base: "/lustre/storeC-ext/users/kin2100/"
+    template_variables: "config/testcase_7/template_variables.json"
 testcase_8:
     configurationTables:
         inputs:  'config/testcase_8/inputs.tsv'
