--- a/tools/wmsconfigs/output/wms_config.yaml
+++ b/tools/wmsconfigs/output/wms_config.yaml
@@ -267,22 +267,22 @@
     intervals: &id012 [0.0, 100.0, 200.0, 300.0, 400.0, 500.0, 750.0, 1000.0, 1500.0]
     name: pr_winter
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id011
     intervals: *id012
     name: pr_spring
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id011
     intervals: *id012
     name: pr_summer
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id011
     intervals: *id012
     name: pr_autumn
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -300,22 +300,22 @@
     intervals: &id014 [0.0, 10.0, 20.0, 30.0, 40.0, 50.0, 60.0]
     name: pr1mm_winter
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id013
     intervals: *id014
     name: pr1mm_spring
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id013
     intervals: *id014
     name: pr1mm_summer
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id013
     intervals: *id014
     name: pr1mm_autumn
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -326,7 +326,7 @@
     intervals: [0.0, 5.0, 10.0, 15.0, 20.0, 25.0]
     name: sdii_annual
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -338,7 +338,7 @@
     intervals: [0.0, 20.0, 40.0, 60.0, 80.0, 100.0, 120.0, 140.0, 160.0, 180.0]
     name: pr997_annual
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -350,7 +350,7 @@
     intervals: [0.0, 10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0, 90.0]
     name: pr20mm_annual
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -362,7 +362,7 @@
     intervals: [0.0, 50.0, 100.0, 150.0, 200.0, 250.0, 300.0, 350.0, 400.0]
     name: prmax5day_annual
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -487,7 +487,7 @@
     intervals: [0.0, 30.0, 60.0, 90.0, 120.0, 150.0, 180.0, 210.0, 240.0]
     name: swe60ge
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -539,28 +539,28 @@
   - colors: &id023 ['#067953', '#1da276', '#52d6aa', '#8bf0ce', '#c7fae9']
     intervals: &id024 [-130.0, -100.0, -80.0, -60.0, -40.0, 0.0]
     name: diff-tas0lt_annual
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id023
     intervals: *id024
     name: diff-tas0lt_winter
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id023
     intervals: *id024
     name: diff-tas0lt_spring
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id023
     intervals: *id024
     name: diff-tas0lt_summer
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id023
     intervals: *id024
     name: diff-tas0lt_autumn
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -758,28 +758,28 @@
   - colors: &id037 ['#0a455e', '#197896', '#29a6c6', '#abeefd', '#F0F8FF']
     intervals: &id038 [-100.0, -60.0, -45.0, -30.0, -15.0, 0.0]
     name: diff-fd_annual
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id037
     intervals: *id038
     name: diff-fd_winter
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id037
     intervals: *id038
     name: diff-fd_spring
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id037
     intervals: *id038
     name: diff-fd_summer
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
   - colors: *id037
     intervals: *id038
     name: diff-fd_autumn
-    open_highest_interval: true
-    open_lowest_interval: true
+    open_highest_interval: false
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
@@ -790,27 +790,27 @@
     intervals: &id040 [-0.1, 0.1, 1.0, 2.0, 3.0]
     name: diff-tasmin20ge_annual
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id039
     intervals: *id040
     name: diff-tasmin20ge_winter
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id039
     intervals: *id040
     name: diff-tasmin20ge_spring
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id039
     intervals: *id040
     name: diff-tasmin20ge_summer
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
   - colors: *id039
     intervals: *id040
     name: diff-tasmin20ge_autumn
     open_highest_interval: true
-    open_lowest_interval: true
+    open_lowest_interval: false
 - base_netcdf_directory: ''
   mapfiles_path: /mapfiles
   module: mapgen.modules.generic_quicklook
