--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,8 +1,8 @@
 configfile: "config/config.yaml"
 
-# include: "rules/testcase_1.smk"
-# include: "rules/testcase_2.smk"
-# include: "rules/testcase_6.smk"
+include: "rules/testcase_1.smk"
+include: "rules/testcase_2.smk"
+include: "rules/testcase_6.smk"
 include: "rules/testcase_7.smk"
 #include: "rules/testcase_8.smk"
 
