--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -4,7 +4,7 @@ include: "rules/testcase_1.smk"
 include: "rules/testcase_2.smk"
 include: "rules/testcase_6.smk"
 include: "rules/testcase_7.smk"
-#include: "rules/testcase_8.smk"
+include: "rules/testcase_8.smk"
 
 rule all:
     input:
