--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -12,5 +12,5 @@ rule all:
         expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths),    # testcase 2
         rules.testcase_6_all.input, # testcase 6
         expand(os.path.join(UPDATED_NC_OUT, "{filename}.nc4"), filename=all_file_paths),  # testcase 7
-        #rules.testcase_8_all.input # testcase 8
+        rules.testcase_8_all.input # testcase 8
     default_target: True
