--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -6,9 +6,9 @@ include: "rules/testcase_6.smk"
 include: "rules/testcase_7.smk"
 include: "rules/testcase_8.smk"
 
-rule run_testcse_1:
+rule run_testcase_1:
     input:
-        rules.testcase_1_all.input 
+        rules.testcase_1_all.input ,
 rule run_testcase_2:        
     input:
         expand(os.path.join(NC_OUT_DIR, "{filename}.nc4") , filename=all_file_paths)
