--- a/config/config.yaml
+++ b/config/config.yaml
@@ -70,29 +70,5 @@ testcase_7:
     input_base: "/lustre/storeC-ext/users/kin2100/"
     template_variables: "config/testcase_7/template_variables.json"
 testcase_8:
-    configurationTables:
-        inputs:  'config/testcase_8/inputs.tsv'
-        indicators: 'config/testcase_8/indicators.tsv'
-        scenarios:  'config/testcase_8/scenarios.tsv'
-        periods:  'config/testcase_8/periods.tsv'
-        seasons: 'config/testcase_8/seasons.tsv'
-        region: 'config/testcase_8/region.tsv'
-    dirs:
-        region: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_8/model_results/EQM/ecearth_racmo'
-        csv: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_8/model_results/EQM/ecearth_racmo'
-
-    # Configuration options------------------------------------
-    arealstats:
-        calcForMembers: False
-    cutouts:
-        method: 'lonlatbox'
-        xmin: 4.088
-        xmax: 31.761
-        ymin: 57.759
-        ymax: 71.384
-    ensembles:
-        upperPercentile: 90
-        centralPercentile: 50
-        lowerPercentile: 10
-    outputGrid:
-        regriddingEngine: None
+    configuration: '/lustre/storeC-ext/users/klimakverna/development/Klimakverna-Pilot1/config/testcase_8/config_CMIP5.json'
+    output_base: '/lustre/storeC-ext/users/klimakverna/development/output/testcase_8/model_results'
